compiler/actonc/test/typeerrors/ex24.golden
Building file test/typeerrors/ex24.act
  Compiling ex24.act for development

ERROR: Error when compiling ex24 module: Type error

  |
4 |    a : ?str = ""
  |        ^^^^^
?__builtin__.str must implement __builtin__.Hashable

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

